debug 0.1 almost done