@@ -3,23 +3,23 @@ package model.entity.mobs;
 import model.entity.HealthPoints;
 import model.entity.Score;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 
 public enum BossMobs {
 
-    SPIDER_KING("Spider King", 1, new HealthPoints(50), Type.LIGHTNING, List.of(new MonsterCard(MonsterCards.BITE, new Score(1)),
-            new MonsterCard(MonsterCards.BLOCK, new Score(1)), new MonsterCard(MonsterCards.FOCUS, new Score(1)), new MonsterCard(MonsterCards.LIGHTNING, new Score(1)))),
-    MEGA_SAURUS("Mega Saurus", 2, new HealthPoints(100), Type.NONE, List.of(new MonsterCard(MonsterCards.BITE, new Score(2)),
-            new MonsterCard(MonsterCards.FOCUS, new Score(2)), new MonsterCard(MonsterCards.FIRE, new Score(1)), new MonsterCard(MonsterCards.LIGHTNING, new Score(1))));
+    SPIDER_KING("Spider King", 1, new HealthPoints(50), Type.LIGHTNING, new ArrayList<>(Arrays.asList(new MonsterCard(MonsterCards.BITE, new Score(1)),
+            new MonsterCard(MonsterCards.BLOCK, new Score(1)), new MonsterCard(MonsterCards.FOCUS, new Score(1)), new MonsterCard(MonsterCards.LIGHTNING, new Score(1))))),
+    MEGA_SAURUS("Mega Saurus", 2, new HealthPoints(100), Type.NONE, new ArrayList<>(Arrays.asList(new MonsterCard(MonsterCards.BITE, new Score(2)), new MonsterCard(MonsterCards.BLOCK, new Score(2)),
+            new MonsterCard(MonsterCards.FOCUS, new Score(2)), new MonsterCard(MonsterCards.FIRE, new Score(1)), new MonsterCard(MonsterCards.LIGHTNING, new Score(1)))));
 
     private final String representation;
     private final int gameLevel;
     private final HealthPoints healthPoints;
     private final Type type;
-    private final List<MonsterCard> cards;
+    private final ArrayList<MonsterCard> cards;
 
-    BossMobs(String representation, int gameLevel, HealthPoints healthPoints, Type type, List<MonsterCard> cards) {
+    BossMobs(String representation, int gameLevel, HealthPoints healthPoints, Type type, ArrayList<MonsterCard> cards) {
         this.representation = representation;
         this.gameLevel = gameLevel;
         this.healthPoints = healthPoints;
@@ -31,7 +31,7 @@ public enum BossMobs {
         return Arrays.stream(BossMobs.values()).filter(boss -> boss.getGameLevel() == level).findFirst().orElseThrow();
     }
 
-    public List<MonsterCard> getCards() {
+    public ArrayList<MonsterCard> getCards() {
         return cards;
     }
 
